body icons added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
         Login
       </button>
     </div>
+    <div class="bodyIcons">
+      <div class="iconContainer">
+        <img
+          class="icon"
+          src="https://www.svgrepo.com/download/488946/flight.svg"
+          alt="flight"
+        /><span class="bodyIconText">Flights </span>
+        <hr />
+      </div>
+      <div class="iconContainer">
+        <img
+          class="icon"
+          src="https://www.svgrepo.com/download/487460/hotel.svg"
+          alt="hotel"
+        /><span class="bodyIconText">Hotels </span>
+        <hr />
+      </div>
+      <div class="iconContainer">
+        <img
+          src="https://www.svgrepo.com/download/511568/bus-front-view-615.svg"
+          class="icon"
+          alt="bus"
+        /><span class="bodyIconText">Bus</span>
+        <hr />
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
