--- a/index.html
+++ b/index.html
@@ -77,43 +77,45 @@
     <div id="searchContainer">
       <button id="searchButton">Search Hotels</button>
     </div>
-    <div id="recentlySearched">
-      <h2>Recently Searched</h2>
-      <h5>GOA, 2 ADULTS</h5>
-    </div>
+    <div id="footerItems">
+      <div id="recentlySearched">
+        <h2>Recently Searched</h2>
+        <h5>GOA, 2 ADULTS</h5>
+      </div>
 
-    <div id="footer">
-      <div class="footerOptions" id="home">
-        <img
-          class="icon"
-          src="https://www.svgrepo.com/download/504469/house.svg"
-          alt="home"
-        />
-        HOME
-      </div>
-      <div class="footerOptions" id="home">
-        <img
-          class="icon"
-          src="https://www.svgrepo.com/download/471116/briefcase-02.svg"
-          alt="trips"
-        />
-        MY TRIPS
-      </div>
-      <div class="footerOptions" id="home">
-        <img
-          class="icon"
-          src="https://www.svgrepo.com/download/506817/discount.svg"
-          alt="offers"
-        />
-        OFFERS
-      </div>
-      <div class="footerOptions" id="home">
-        <img
-          class="icon"
-          src="https://www.svgrepo.com/download/513868/user.svg"
-          alt="account"
-        />
-        ACCOUNT
+      <div id="footer">
+        <div class="footerOptions" id="home">
+          <img
+            class="icon"
+            src="https://www.svgrepo.com/download/504469/house.svg"
+            alt="home"
+          />
+          HOME
+        </div>
+        <div class="footerOptions" id="home">
+          <img
+            class="icon"
+            src="https://www.svgrepo.com/download/471116/briefcase-02.svg"
+            alt="trips"
+          />
+          MY TRIPS
+        </div>
+        <div class="footerOptions" id="home">
+          <img
+            class="icon"
+            src="https://www.svgrepo.com/download/506817/discount.svg"
+            alt="offers"
+          />
+          OFFERS
+        </div>
+        <div class="footerOptions" id="home">
+          <img
+            class="icon"
+            src="https://www.svgrepo.com/download/513868/user.svg"
+            alt="account"
+          />
+          ACCOUNT
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
