--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
         <h2>Recently Searched</h2>
         <h5>GOA, 2 ADULTS</h5>
       </div>
+      <div id="dateSearched">
+        <div>
+          <p>Tue</p>
+          <p>06 Jun</p>
+        </div>
+        <p>-</p>
+        <div>
+          <p>Wed</p>
+          <p>07 Jun</p>
+        </div>
+      </div>
 
       <div id="footer">
         <div class="footerOptions" id="home">
