done and dusted

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <div id="footerItems">
       <div id="recentlySearched">
         <h1>Recently Searched</h1>
-        <h4>GOA, 2 ADULTS</h4>
       </div>
+      <h4 id="searchedPlace">GOA, 2 ADULTS</h4>
       <div id="dateSearched">
         <div>
           <p>Tue</p>
