--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           />
           HOME
         </div>
-        <div class="footerOptions" id="home">
+        <div class="footerOptions" id="trips">
           <img
             class="icon"
             src="https://www.svgrepo.com/download/471116/briefcase-02.svg"
@@ -112,7 +112,7 @@
           />
           MY TRIPS
         </div>
-        <div class="footerOptions" id="home">
+        <div class="footerOptions" id="offers">
           <img
             class="icon"
             src="https://www.svgrepo.com/download/506817/discount.svg"
@@ -120,7 +120,7 @@
           />
           OFFERS
         </div>
-        <div class="footerOptions" id="home">
+        <div class="footerOptions" id="account">
           <img
             class="icon"
             src="https://www.svgrepo.com/download/513868/user.svg"
