--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           ACCOUNT
         </div>
       </div>
-      <hr />
+      <hr id="lastLine" />
     </div>
     <script src="script.js"></script>
   </body>
